--- a/receitas/esfiha/esfiha.html
+++ b/receitas/esfiha/esfiha.html
@@ -82,6 +82,15 @@
                 <ul>
                     <li class="trem"><i class="prefixo">&#10158;</i> 500ml de água morna (reserve o restante) com o fermento e açúcar e deixe descansar por cerca de 10 minutos;</li>
                     <li class="trem"><i class="prefixo">&#10158;</i>Junte a farinha (separe uma pequena parte), o óleo e o sal. Misture com auxílio de uma colher de pau;</li>
+                    <li class="trem"><i class="prefixo">&#10158;</i>Sobre uma superfície enfarinhada, sove a massa;</li>
+                    <li class="trem"><i class="prefixo">&#10158;</i>Acrescente a farinha reservada com a água aos poucos, até que a massa se torne homogênea e desgrude das mãos;</li>
+                    <li class="trem"><i class="prefixo">&#10158;</i>Deixe descansar durante 10 minutos;</li>
+                    <li class="trem"><i class="prefixo">&#10158;</i>Após descansar, divida a massa em duas partes iguais;</li>
+                    <li class="trem"><i class="prefixo">&#10158;</i>Medindo três dedos, divida as duas partes da massa em partes iguais;</li>
+                    <li class="trem"><i class="prefixo">&#10158;</i>Utilizando o fubá para polvilhar, faça bolinhas e abra-as com os dedos. <strong> Atenção:</strong> deixar as bordas altas, como uma espécie de ninho;</li>
+                    <li class="trem"><i class="prefixo">&#10158;</i>Acomode os ninhos no fubá em uma forma e deixe descansar por 15 minutos;</li>
+                    <li class="trem"><i class="prefixo">&#10158;</i>Coloque uma pequenaporção do recheio em cada disco e leve ao forno preaquecido a 180ºC;</li>
+                    <h4>Está pronto o sorvetinho <i class="fas fa-check-double"></i></h4>
                 </ul>
             </div>
         </section>
